<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/now_playing"
        android:icon="@drawable/ic_menu_now_playing"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/up_coming"
        android:icon="@drawable/ic_menu_up_coming"
        android:title="@string/up_coming" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/favorites" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings" />


</menu>
